--- a/app/css/style.css
+++ b/app/css/style.css
@@ -14,10 +14,42 @@ body{
 
 
 .my-square{
+  float: left;
   width: 100px;
   height: 100px;
   background-color: red;
 }
+
+
+.my-circle{
+  width: 100px;
+  height: 100px;
+  background-color: orange;
+  border-radius: 50%;
+}
+
+
+.clearfix{
+  float: none;
+}
+
+
+.my-square-grid{
+  overflow-y: hidden;
+  min-height: 200px;
+
+  min-width: 100px;
+  color: white;
+  background-color: purple;
+
+}
+
+.my-square-grid > * {
+  margin: 15px;
+  padding: 5px;
+  border: 1px solid deeppink;
+}
+
 
 ul.users {
   
