--- a/app/features/userProfiles/styles/users.scss
+++ b/app/features/userProfiles/styles/users.scss
@@ -1,61 +1,8 @@
-/* Styles go here */
-
-
-
-body{
-  font-family: 'Slabo 27px', serif;  
-}
-
-.nav, .pagination, .carousel, .panel-title a { cursor: pointer; } 
-
-.navbar-spacer{
-  height: 50px;
-}
-
-
-
-.my-thick-border{
-  border: 4px solid springgreen;
-  
-}
-
-.my-square{
-  float: left;
-  width: 100px;
-  height: 100px;
-  background-color: red;
-}
-
-
-.my-circle{
-  width: 100px;
-  height: 100px;
-  background-color: orange;
-  border-radius: 50%;
-}
-
-
-.clearfix{
-  float: none;
-}
-
-
-.my-square-grid{
-  overflow-y: hidden;
-  min-height: 200px;
-
-  min-width: 100px;
-  color: white;
-  background-color: purple;
-
-}
-
-.my-square-grid > * {
-  margin: 15px;
-  padding: 5px;
-  border: 1px solid deeppink;
-}
-
+/**
+ *
+ * users.scss
+ *
+ */
 
 ul.users {
   
