--- a/app/features/domExtra/dom-extra.scss
+++ b/app/features/domExtra/dom-extra.scss
@@ -4,10 +4,10 @@
  *
  */
 @mixin thick-border(){
-  border: 4px solid springgreen;
+  // border: 4px solid springgreen;
 
-  margin-top: 50px; // just to add some space
-  margin-bottom: 50px; // just to add some space
+  // margin-top: 50px; // just to add some space
+  // margin-bottom: 50px; // just to add some space
   overflow-y: hidden;  // so that it wraps border around floats.
   
 }
@@ -25,12 +25,17 @@
      min-height: 10px;
      top: 0;
      left: 0;
-     font-size: 8px;
      text-align: right;
 
      button{
+       font-size: 8px;
        margin-top: 5px;
        margin-right: 5px;
+     }
+
+     span{
+       margin: 10px;
+       cursor: pointer;
      }
 
    }
