adds makes modal wiring more advances (resolve, returning result, selection of item)

--- a/app/styles/common.scss
+++ b/app/styles/common.scss
@@ -8,7 +8,11 @@ body{
   font-family: 'Slabo 27px', serif;  
 }
 
-.nav, .pagination, .carousel, .panel-title a { cursor: pointer; } 
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+a[ng-click]{
+  cursor: pointer;
+}
 
 
 .clearfix{
